--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,16 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- FirebaseUI Auth -->
+    <script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.css"
+    />
   </head>
-  <body class="h-full">
+  <body class="h-screen">
     <app-root></app-root>
   </body>
 </html>
